modules/journeyly/ec2.tf
data "aws_ami" "amz_linux" {
  most_recent = true

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  filter {
    name   = "root-device-type"
    values = ["ebs"]
  }

  filter {
    name   = "architecture"
    values = ["arm64"]
  }

  filter {
    name   = "name"
    values = ["amzn2-ami*"]
  }

  filter {
    name   = "owner-alias"
    values = ["amazon"]
  }
}

resource "aws_instance" "free" {
  ami           = data.aws_ami.amz_linux.id
  instance_type = "t4g.small"

  network_interface {
    network_interface_id = aws_network_interface.free.id
    device_index         = 0
  }

  tags = merge(local.common_tags, {
    Name = "Free"
  })
}
